[package]
name = "cognee-cognify"
version.workspace = true
edition.workspace = true

[features]
testing = ["cognee-storage/testing"]

[dependencies]
cognee-models = { path = "../cognee-models" }
cognee-storage = { path = "../cognee-storage" }
cognee-chunking = { path = "../cognee-chunking" }
cognee-llm = { path = "../cognee-llm" }
cognee-graph = { path = "../cognee-graph" }
cognee-utils = { path = "../cognee-utils" }
cognee-embedding = { path = "../cognee-embedding" }
cognee-vector = { path = "../cognee-vector" }
cognee-ontology = { path = "../cognee-ontology" }

uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true

[dev-dependencies]
cognee-storage = { path = "../cognee-storage", features = ["testing"] }
cognee-graph = { path = "../cognee-graph", features = ["testing"] }
cognee-vector = { path = "../cognee-vector", features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
