[package]
name = "cognee-delete"
version.workspace = true
edition.workspace = true

[dependencies]
cognee-database = { path = "../cognee-database" }
cognee-models = { path = "../cognee-models" }
cognee-storage = { path = "../cognee-storage" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
