[package]
name = "cognee-embedding"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
