[package]
name = "cognee-ingestion"
version = "0.1.0"
edition.workspace = true

[dependencies]
cognee-database = { path = "../cognee-database" }
cognee-models = { path = "../cognee-models" }
cognee-storage = { path = "../cognee-storage" }
sha2 = "0.10"
uuid.workspace = true
tokio.workspace = true
mime_guess = "2.0"
reqwest.workspace = true
scraper.workspace = true
thiserror.workspace = true
url.workspace = true
futures-util.workspace = true

[dev-dependencies]
cognee-database = { path = "../cognee-database", features = ["testing"] }
cognee-storage = { path = "../cognee-storage", features = ["testing"] }
tempfile.workspace = true
