[package]
name = "cognee-ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
cognee-database = { path = "../cognee-database" }
cognee-models = { path = "../cognee-models" }
cognee-storage = { path = "../cognee-storage" }
cognee-utils = { path = "../cognee-utils" }
sha2.workspace = true
uuid.workspace = true
tokio.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
scraper.workspace = true
thiserror.workspace = true
url.workspace = true
futures-util.workspace = true

[dev-dependencies]
cognee-database = { path = "../cognee-database", features = ["testing"] }
cognee-storage = { path = "../cognee-storage", features = ["testing"] }
tempfile.workspace = true
