[package]
name = "cognee-ontology"
version = "0.1.0"
edition.workspace = true

[dependencies]
cognee-models = { path = "../cognee-models" }

uuid = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# RDF/OWL parsing and graph operations
sophia = { workspace = true }
sophia_api = { workspace = true }
sophia_inmem = { workspace = true }
sophia_turtle = { workspace = true }
sophia_xml = { workspace = true }
sophia_jsonld = { workspace = true }

# Fuzzy string matching for entity resolution
strsim = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
env_logger = { workspace = true }
