[package]
name = "cognee-search"
version = "0.1.0"
edition = "2024"

[dependencies]
cognee-embedding = { path = "../cognee-embedding" }
cognee-database = { path = "../cognee-database" }
cognee-graph = { path = "../cognee-graph" }
cognee-llm = { path = "../cognee-llm" }
cognee-vector = { path = "../cognee-vector" }

async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
schemars = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
cognee-database = { path = "../cognee-database", features = ["testing"] }
cognee-graph = { path = "../cognee-graph", features = ["testing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
