[package]
name = "cognee-search"
version.workspace = true
edition.workspace = true

[dependencies]
cognee-embedding = { path = "../cognee-embedding" }
cognee-database = { path = "../cognee-database" }
cognee-graph = { path = "../cognee-graph" }
cognee-llm = { path = "../cognee-llm" }
cognee-vector = { path = "../cognee-vector" }

async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true
schemars.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
cognee-database = { path = "../cognee-database", features = ["testing"] }
cognee-graph = { path = "../cognee-graph", features = ["testing"] }
cognee-models = { path = "../cognee-models" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
