[package]
name = "cognee-utils"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Logging
log.workspace = true

# Random (for jitter)
rand.workspace = true

# UUID generation
uuid = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
