[package]
name = "cognee-vector"
version = "0.1.0"
edition.workspace = true

[features]
testing = []

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Qdrant internals
edge = { workspace = true }
segment = { workspace = true }
shard = { workspace = true }
common = { workspace = true }

# Data structures
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
