[package]
name = "cognee-cognify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
testing = ["cognee-storage/testing", "cognee-graph/testing", "cognee-vector/testing"]
html-loader = ["cognee-ingestion/html-loader"]
image-loader = ["cognee-ingestion/image-loader"]
audio-loader = ["cognee-ingestion/audio-loader"]

[dependencies]
cognee-models = { path = "../models" }
cognee-storage = { path = "../storage" }
cognee-chunking = { path = "../chunking" }
cognee-core = { path = "../core" }
cognee-ingestion = { path = "../ingestion" }
cognee-llm = { path = "../llm" }
cognee-graph = { path = "../graph" }
cognee-utils = { path = "../utils" }
cognee-embedding = { path = "../embedding" }
cognee-vector = { path = "../vector" }
cognee-ontology = { path = "../ontology" }
cognee-database = { path = "../database" }
cognee-session = { path = "../session" }

chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cognee-storage    = { path = "../storage", features = ["testing"] }
cognee-embedding  = { path = "../embedding", features = ["onnx"] }
cognee-graph      = { path = "../graph", features = ["testing", "ladybug"] }
cognee-vector     = { path = "../vector", features = ["testing"] }
cognee-database   = { path = "../database", features = ["sqlite"] }
cognee-search     = { path = "../search" }
cognee-delete     = { path = "../delete" }
cognee-test-utils = { path = "../test-utils" }
cognee-llm        = { path = "../llm" }
cognee-session    = { path = "../session", features = ["fs"] }
dotenv.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
