[package]
name = "cognee-components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cognee — shared pipeline-component construction: adapter factories + a pluggable registry."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Standalone builds register the common OSS provider set. Downstream crates
# (cognee-lib, cognee-http-server) depend with `default-features = false` and
# forward exactly the features they want, so `--no-default-features` builds
# stay precise.
default = ["onnx", "ladybug", "pgvector", "pggraph", "mock-llm"]

onnx         = ["cognee-embedding/onnx"]
onnx-dynamic = ["onnx", "cognee-embedding/onnx-dynamic"]
ort-cuda     = ["cognee-embedding/ort-cuda"]
ort-tensorrt = ["cognee-embedding/ort-tensorrt"]
ladybug      = ["cognee-graph/ladybug"]
pgvector     = ["cognee-vector/pgvector", "dep:url"]
pggraph      = ["cognee-graph/postgres", "dep:url"]
# Record/replay cassette-based mock LLM (MOCK_LLM / COGNEE_RECORD_LLM).
mock-llm     = ["cognee-llm/mock"]
# Enables the in-memory `mock` vector and graph providers in `with_builtins()`.
testing      = ["cognee-vector/testing", "cognee-graph/testing"]

[dependencies]
cognee-database = { path = "../database", version = "0.1.3" }
cognee-embedding = { path = "../embedding", version = "0.1.3" }
cognee-graph = { path = "../graph", version = "0.1.3" }
cognee-llm = { path = "../llm", version = "0.1.3" }
cognee-storage = { path = "../storage", version = "0.1.3" }
cognee-vector = { path = "../vector", version = "0.1.3" }
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
cognee-vector = { path = "../vector", features = ["testing"] }
cognee-database = { path = "../database", features = ["sqlite"] }
